
2013-07-12  Guilherme Íscaro

        * Add elm_dayselector_wekdays_names_set/get

2013-07-13  Daniel Juyung Seo

        * Fix elm_object_item_part_content_set bug with end content in elm_list.

2013-07-14  ChunEon Park (Hermet)

        * Entry : Change the keyboard mode only if the imf is not available. If
        the imf is available, the keyboard mode should be decided by ime, but
        not entry. This prevents the asynchronous states between ime and
        conformant.

2013-07-23  ChunEon Park (Hermet)

        * File Selector : Support elm_object_part_text_set() for the ok, cancel
        part to change the OK, Cancel button label.

2013-07-25  Carsten Haitzler (The Rasterman)

        * Add throttle policy settings to elm

2013-07-26  ChunEon Park (Hermet)

        * Flip : Fix the flip page to not flip on a direction if the direction
        is disabled.

2013-07-31  Shinwoo Kim

        * Add _elm_access_object_get, deprecate _elm_access_info_get.

2013-07-31  Carsten Haitzler (The Rasterman)

        * Fix elm to use key not keyname (otherwise xmodmap and friends
        don't work).

2013-08-09  Cedric Bail

        * Add support for URL in Elm_Image with the following new smart
        callback : "download,start", "download,progress", "download,done",
        "download,error".

2013-08-10  ChunEon Park (Hermet)

        * Popup: Fix the corrupted internal widget tree that caused
        elm_theme_set() doesn't work correctly.

2013-08-11  Daniel Juyung Seo (SeoZ)

        * Win Focus: Added elm_win_focus_highlight_animate_set/get().

2013-08-12  Cedric Bail

        * Add URL support to Elm_Photocam with the same callback as URL suport
        in Elm_Image.

2013-08-12  ChunEon Park (Hermet)

        * Mapbuf: Ensure that content size calculation is correctly finished
        because the mapbuf is willing to block the size calculation forcely.

2013-08-19  ChunEon Park (Hermet)

        * Popup: Support "language,changed" smart callback.